[project]
name = "elliptic-fraud-detection"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.10",
    "dlg>=0.2",
    "matplotlib>=3.10.9",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "python-louvain>=0.16",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
]
